style.css
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
	margin:0;
	padding:0;
	border:0;
	font-size:100%;
/*font:inherit;*/
	vertical-align:baseline;
}

article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
	display:block;
}

#sliders > ol,#sliders > ul {
	list-style:none;
	margin:0;
	padding:0;
}

#body > pre {
	padding:10px 0;
}

blockquote,q {
	quotes:none;
}

blockquote:before,blockquote:after,q:before,q:after {
	content:'';
	content:none;
}

table {
	border-collapse:collapse;
	border-spacing:0;
}

#table-contents {
	float:right;
	border:1px solid #007AC3;
	margin:24px;
}

#table-contents > ul {
	list-style:none;
	list-style-type:none;
	padding:0 30px;
}

#table-contents > ul > li {
	padding:5px 0;
}

#table-contents > ul > li > a {
	color:#555;
}

#footer {
    padding:24px 48px;
    background: repeat-x scroll 0% 0% #555;
    bottom:0px;
    width:100%;
}
#footer, #footer > a {
    color:#fff;
    text-transform: capitalize;
font-size: 0.8725em;
}
/* start editing from here */
a {
	text-decoration:none;
}

.txt-rt {
	text-align:right;
}

/* text align right */
.txt-lt {
	text-align:left;
}

/* text align left */
.txt-center {
	text-align:center;
}

.adsense {
	width:160px;
	height:600px;
	position:absolute;
	left:1109px;
	top:10px;
}

/* text align center */
.float-rt {
	float:right;
}

/* float right */
.float-lt {
	float:left;
}

/* float left */
.clear {
	clear:both;
}

/* clear float */
.pos-relative {
	position:relative;
}

/* Position Relative */
.pos-absolute {
	position:absolute;
}

/* Position Absolute */
.vertical-base {
	vertical-align:baseline;
}

/* vertical align baseline */
.vertical-top {
	vertical-align:top;
}

/* vertical align top */
.underline {
	padding-bottom:5px;
	border-bottom:1px solid #eee;
	margin:0 0 20px;
}

/* Add 5px bottom padding and a underline */
nav.vertical ul li {
	display:block;
}

/* vertical menu */
nav.horizontal ul li {
	display:inline-block;
}

/* horizontal menu */
img {
	max-width:100%;
}

body {
	font-family:trebuchet ms,arial,sans-serif;
	font-size:100%;
	background:#fff;
	color:#555;
    height:100%;
    min-height:100%;
}

#sliders > li > div > div.ui-slider {
	width:120px;
	height:7px;
	margin:10px 10px 2px;
	display:inline-block;
}

#sliders > li > label {
	line-height:2em;
}

#sliders > li > div {
	display:inline-block;
	float:right;
	padding-right:4px;
}

#description {
	padding-left:48px;
	width:650px;
	display:inline-block;
	vertical-align:top;
	margin-top: -24px;
}

#social {
	text-align:right;
	padding-bottom:10px;
}

#social > div {
    vertical-align: top;
}

#sliders {
/*-webkit-column-count: 3; /* Chrome, Safari, Opera */
/*-moz-column-count: 3; /* Firefox */
/*column-count: 3;  */
}

#sliders > ul > li > label {
	float:left;
	display:block;
}

#sliders {
	-moz-column-count:3;
	-moz-column-gap:20px;
	-moz-column-rule:4px solid #ccc;
	-webkit-column-count:3;
	-webkit-column-gap:20px;
	-webkit-column-rule:4px solid #ccc;
	column-count:3;
	column-gap:20px;
	column-rule:4px solid #ccc;
	width:1080px;
	padding:20px;
}

#sliders > li > div > div.value {
	padding:0 7px;
	margin:0;
	display:inline;
}

#sliders > li {
	list-style-type:none;
	height:38px;
}

.logo,.logo > h1,.logo > h1 > a,.logo > h1 > a:visited {
	float:left;
	font-size:48px;
	color:#007AC3;
	font-family:"Pontano Sans",sans-serif;
	padding-left:24px;
	padding-top:4px;
}

#body {
	width:1008px;
	padding-left:72px;
}

#body > h1 {
	font-size:36px;
	padding: 12px 0px;
}

#body > h2 {
	font-size:24px;
	padding:14px 8px;
}

#stat-descriptions > li {
	padding-bottom:12px;
}

#options {
	display:inline-block;
	float:right;
}

#teams {
	font-size:10px;
	width:1080px;
	padding:0 20px;
}

#play-in,#play-in-title {
	text-align:center;
}

#play-in-title {
	font-weight:700;
	padding-bottom:4px;
	font-size:larger;
}

#top-bar {
	width:1080px;
}

#year-div {
	background-color:#BAD7E5;
	padding:4px;
	border-radius:10px;
}

#year-div > h1 {
    font-weight:700;
	font-size:24px;
	text-align:center;
}

#year-select {
    text-align:center;
    padding-top:10px;
}

#data-headline,#share-div,#year-div,#top-bar,#correct-div,.menu {
	display:inline-block;
}

#correct,#score {
	text-align:right;
}

#share-div,#correct-div,.menu {
	padding-left:20px;
}

#year-div {
    position:absolute;
    left: 480px;
    width: 152px;
    top: 300px;
    z-index: 999;
}

#play-in > li,#play-in > li > div {
	display:inline;
	padding:10px;
}

#play-in > li > div.region {
	padding-right:0;
}

.jQBracket > .tools {
	display:none;
}

.rtol {
	float:right;
	text-align:right;
}

.ltor {
	float:left;
	text-align:left;
}

.fl {
	float:left;
}

.fr {
	float:right;
}

.winner {
	color:#000;
}

.loser {
	color:grey;
}

.correct {
	color:#090;
}

.incorrect {
	color:#900;
}

.bracket-container {
	width:1080px;
	height:643px;
	background:url(bracket.svg) no-repeat top left;
	background-size:contain;
	letter-spacing:-.5px;
	-webkit-print-color-adjust:exact;
}

#championship {
	font-weight:700;
	position:absolute;
	left:516px;
	text-align:center;
	line-height:65em;
	height:30em;
}

.championship-left {
	line-height:54em;
}

.championship-right {
	line-height:76em;
}

#scoring-wrapper {
	font-weight:700;
	position:absolute;
	left:380px;
	text-align:center;
	padding-top:50em;
	height:30em;
	width:320px;
}

#scoring-wrapper > div > h1 {
	font-weight:700;
	font-size:24px;
	text-align:right;
}

#correct-wrapper {
	float:left;
}

#correct-wrapper,#score-wrapper {
	display:inline-block;
	padding:20px;
	width:100px;
}

#clear {
	width:25%;
	margin:0 auto;
}

/****** round 1 ******/
.round1-top,.round1-bottom {
	width:90px;
	height:3em;
}

.round1-top {
	line-height:3em;
}

.round2-topwrap .round1-bottom {
	width:89px;
}

.round2-bottomwrap .round1-top {
	width:89px;
}

/****** round 2 ******/
.round2-top,.round2-bottom {
	width:86px;
	height:4em;
	line-height:5em;
}

.round3-topwrap .round2-bottom {
	width:86px;
}

.round3-bottomwrap .round2-top {
	width:86px;
}

.tournament4-wrap .round2-top {
}

.round2-topwrap,.round2-bottomwrap {
	width:180px;
	height:4em;
}

/****** round 3 ******/
.round3-top,.round3-bottom {
	width:86px;
	height:8em;
	line-height:9em;
}

.round4-topwrap .round3-bottom {
	width:86px;
}

.round4-bottomwrap .round3-top {
	width:86px;
}

.tournament8-wrap .round3-top {
}

.round3-topwrap,.round3-bottomwrap {
	width:270px;
	height:8em;
}

/****** round 4 ******/
.round4-top,.round4-bottom {
	width:86px;
	height:16em;
	line-height:17em;
}

.round5-topwrap .round4-bottom {
	width:86px;
}

.round5-bottomwrap .round4-top {
	width:86px;
}

.round4-topwrap,.round4-bottomwrap {
	width:360px;
}

.tournament16-wrap .round4-top {
}

/****** round 5 ******/
.round5-top,.round5-bottom {
	width:86px;
	height:32em;
	line-height:33em;
}

.tournament32-wrap .round5-top {
}

.round5-topwrap,.round5-bottomwrap,.tournament16-wrap {
	width:450px;
}

/****** round 6 ******/
.round6-top,.round6-bottom {
	width:86px;
	height:32em;
}

.tournament32-wrap {
	width:540px;
}

.cssmenu {
	float:right;
	margin-top:1%;
}

.cssmenu > ul > li {
	display:inline-block;
	position:relative;
}

.cssmenu > ul > li.active a {
	color:#fff;
	background-color:#007AC3;
}

.cssmenu > ul > li span img {
	vertical-align:middle;
}

.cssmenu > ul > li > a {
	font-weight:700;
	color:#555;
	display:block;
	font-size:15px;
	line-height:1.8em;
	padding:24px 26px;
	text-transform:uppercase;
	-webkit-transition:all .3s ease-out;
	-moz-transition:all .3s ease-out;
	-ms-transition:all .3s ease-out;
	-o-transition:all .3s ease-out;
	transition:all .3s ease-out;
}

.cssmenu > ul > li > a:hover {
	background-color:#007AC3;
	color:#fff;
}

/* display with 840px  */
.top-nav {
	display:none;
}

.nav_bg {
	background:#464646;
}

.clearfix {
	height:40px;
	width:100%;
	font-size:11pt;
	font-weight:700;
	position:relative;
	z-index:9999;
}

.clearfix ul {
	padding:0;
	margin:0 auto;
	display:none;
	background:#f0f0f0;
}

.clearfix li {
	display:block;
}

.clearfix a {
	color:#555;
	font-size:15px;
	font-weight:700;
	text-transform:uppercase;
	display:block;
	width:100%;
	text-indent:10px;
	text-align:left;
	text-decoration:none;
	line-height:40px;
	-webkit-transition:all .3s ease-out;
	-moz-transition:all .3s ease-out;
	-ms-transition:all .3s ease-out;
	-o-transition:all .3s ease-out;
	transition:all .3s ease-out;
}

.clearfix li a {
	border-bottom:1px solid rgba(90,85,73,0.17);
	box-sizing:border-box;
	-moz-box-sizing:border-box;
	-webkit-box-sizing:border-box;
}

.clearfix li:last-child a {
	border-right:0;
}

.clearfix a:hover,.clearfix a:active {
	background:#424242;
	color:#fff;
}

.clearfix a#pull {
	font-size:20px;
	display:block;
	width:100%;
	position:relative;
	text-shadow:0 1px 0 #181717;
	color:#FFF;
	background-color:#007AC3;
}

.clearfix a#pull:after {
	background:url(../images/nav-icon.png)no-repeat;
	width:30px;
	content:"";
	width:30px;
	height:30px;
	display:inline-block;
	position:absolute;
	right:15px;
	top:10px;
}

